examples/stress-test/errors/bad-circular-b.mds
@import "./bad-circular-a.mds" as a

Hello from B!
